CHANGES-1.3.txt
---------------

CHANGES IN CUPS V1.3.8

	- The PNG image loading code would crash with large images
	  (STR #2790)
	- The scheduler did not log the current date and time and
	  did not escape special characters in request URIs when
	  logging bad requests to the access_log file (STR #2788)


CHANGES IN CUPS V1.3.7

	- CVE-2008-0047: cgiCompileSearch buffer overflow (STR #2729)
	- CVE-2008-1373: CUPS GIF image filter overflow (STR #2765)
	- Updated the "make check" tests to do a more thorough
	  automated test.
	- cups-driverd complained about missing directories (STR
	  #2777)
	- cupsaddsmb would leave the Samba username and password on
	  disk if no Windows drivers were installed (STR #2779)
	- The Linux USB backend used 100% CPU when a printer was
	  disconnected (STR #2769)
	- The sample raster drivers did not properly handle SIGTERM
	  (STR #2770)
	- The scheduler sent notify_post() messages too often on
	  Mac OS X.
	- Kerberos access to the web interface did not work
	  (STR #2748)
	- The scheduler did not support "AuthType Default" in IPP
	  policies (STR #2749)
	- The scheduler did not support the "HideImplicitMembers"
	  directive as documented (STR #2760)
	- "make check" didn't return a non-zero exit code on
	  error (STR #2758)
	- The scheduler incorrectly logged AUTH_foo environment
	  variables in debug mode (STR #2751)
	- The image filters inverted PBM files (STR #2746)
	- cupsctl would crash if the scheduler was not running
	  (STR #2741)
	- The scheduler could crash when printing using a port
	  monitor (STR #2742)
	- The scheduler would crash if PAM was broken (STR #2734)
	- The image filters did not work with some CMYK JPEG files
	  produced by Adobe applications (STR #2727)
	- The Mac OS X USB backend did not work with printers that
	  did not report a make or model.
	- The job-sheets option was not encoded properly (STR #2715)
	- The scheduler incorrectly complained about missing LSB
	  PPD directories.


CHANGES IN CUPS V1.3.6
