@@ -3,6 +3,8 @@ CHANGES-1.3.txt
 
 CHANGES IN CUPS V1.3.8
 
+	- The web interface allowed the creation and cancellation
+	  of RSS subscriptions without a username (STR #2774)
 	- The PNG image loading code would crash with large images
 	  (STR #2790)
 	- The scheduler did not log the current date and time and
